Repair bug tool, error measure script done, update latex : background and results

--- a/Thesis-latex/biblio.bib
+++ b/Thesis-latex/biblio.bib
@@ -403,3 +403,9 @@ Theory Group (Formerly: E1071), TU Wien},
     url = {https://CRAN.R-project.org/package=quantmod},
 }
 
+
+@MISC{Hsu,
+    author = {Chih-wei Hsu and Chih-chung Chang and Chih-jen Lin},
+    title = {A practical guide to support vector classification },
+    year = {2010}
+}
